--- a/ecommerce/Views/Carrinho/confirmPag.cshtml
+++ b/ecommerce/Views/Carrinho/confirmPag.cshtml
@@ -27,6 +27,7 @@
       box-shadow:0 18px 40px rgba(0,0,0,.25);
       padding:28px 22px 26px; text-align:center;
       position:relative;
+      margin-top: -100px;
     }
     .s-close{
       position:fixed; right:18px; top:12px;
