--- a/ecommerce/Views/Loja/Index.cshtml
+++ b/ecommerce/Views/Loja/Index.cshtml
@@ -25,7 +25,7 @@
     @Html.AntiForgeryToken()
     <input type="hidden" name="produtoId" value="@produto.Id" />
     <input type="hidden" name="quantidade" value="1" />
-    <input type="hidden" name="next" value="index" />  @* ou "infos" *@
+    <input type="hidden" name="next" value="index" />  @*  *@
     <button type="submit" class="btn btn-warning btn-sm mb-2">
         Adicionar ao Carrinho <i class="bi bi-cart4"></i>
     </button>
