Alterações nas views

--- a/ecommerce/Views/Carrinho/Infos.cshtml
+++ b/ecommerce/Views/Carrinho/Infos.cshtml
@@ -75,7 +75,7 @@
         <div class="card-title">PEDIDO</div>
 
         <div class="row">
-          <span>Total do pedido:</span>
+          <span>Subtotal do pedido:</span>
           <strong>R$ @Model.Subtotal.ToString("N2")</strong>
         </div>
         <div class="row">
