--- a/ecommerce/Views/Shared/_Layout.cshtml
+++ b/ecommerce/Views/Shared/_Layout.cshtml
@@ -260,15 +260,16 @@
         <style>
             .footer, .footer-bottom {
                 background-color: #856045;
-                color: #000;
+                color: white;
             }
 
             .footer {
                 padding: 24px 16px;
+                color: white;
             }
 
                 .footer a {
-                    color: inherit;
+                    color: white;
                     text-decoration: none;
                 }
 
@@ -318,19 +319,19 @@
 
         <!-- Ícones das redes sociais -->
         <div id="redes">
-            <a href="https://wa.me/55XXXXXXXXXX" target="_blank" aria-label="WhatsApp"><img src="~/img/whatsapp.png" alt="WhatsApp" /></a>
-            <a href="https://www.instagram.com/horizonys_/" target="_blank" aria-label="Instagram"><img src="~/img/instagram.png" alt="Instagram" /></a>
-            <a href="https://www.linkedin.com/in/horizonys-enterprise-80244a358/" target="_blank" aria-label="LinkedIn"><img src="~/img/linkedin.png" alt="LinkedIn" /></a>
+            <a href="https://wa.me/55XXXXXXXXXX" target="_blank" aria-label="WhatsApp"><img src="~/img/wpp.png" alt="WhatsApp" /></a>
+            <a href="https://www.instagram.com/horizonys_/" target="_blank" aria-label="Instagram"><img src="~/img/insta.png" alt="Instagram" /></a>
+            <a href="https://www.linkedin.com/in/horizonys-enterprise-80244a358/" target="_blank" aria-label="LinkedIn"><img src="~/img/link2.png" alt="LinkedIn" /></a>
         </div>
 
         <!-- Contatos -->
         <div id="cont">
             <div class="contact-line">
-                <img src="~/img/email.png" alt="E-mail" />
+                <img src="~/img/email2.png" alt="E-mail" />
                 <p><a href="mailto:horizonys08@gmail.com">horizonys08@gmail.com</a></p>
             </div>
             <div class="contact-line">
-                <img src="~/img/pin.png" alt="Endereço" />
+                <img src="~/img/loc.png" alt="Endereço" />
                 <p>Av. Brigadeiro Faria Lima, 3600</p>
             </div>
         </div>
