--- a/ecommerce/Views/Usuario/Registrar.cshtml
+++ b/ecommerce/Views/Usuario/Registrar.cshtml
@@ -22,7 +22,7 @@
 
             <div class="form-group">
                 <label class="reg-label" for="DataNasc">Data de Nascimento*</label>
-                <input asp-for="DataNasc" id="DataNasc" class="input-pill" placeholder="Digite apenas números." maxlength="10" />
+                <input asp-for="DataNasc" id="DataNasc" class="input-pill" type="date" />
                 <span asp-validation-for="DataNasc" class="text-danger small"></span>
             </div>
 
